# gmail-mcp-project

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: cli.py
auth/: token_store.py  token_store_web.py
backend/: agent_stream.py  main.py
frontend/: next.config.js
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
gmail_mcp/: gmail_client.py  server.py
